fdo#73872: File Corruption - Issue with w:footerReference in document.xml

Problem Description :
- In case if the header/footer had a chart in it then the associated
  relation Id was getting added to document.xml.rels instead of adding
  it to the relevent item*.xml.rels file.
- Due to this the MS office was unable to read the round tripped file.

Implementation :
- Added the relation id's to relevant rels files.

Change-Id: I412178222400e98ab2ef46d930c1e1fdfebf9799
Reviewed-on: https://gerrit.libreoffice.org/7630
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>